# Text-To-3d

./: CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
src/: Concept.txt  main.cpp
